# textos

./: Cargo.toml  Changelog.md  README.md  check.sh
.cargo/: config.toml
.github/workflows/: check.yml  nostd.yml
src/: array_string.rs  ascii.rs  error.rs  lib.rs  macros.rs  textual.rs
src/fmt/: indent.rs  int_buf.rs  mod.rs
src/string/: array.rs  chars.rs  counter.rs  mod.rs  non_nul.rs  sized.rs  string_u8.rs  u8string.rs
src/string/chars/: core_impls.rs  impls.rs  mod.rs  tests.rs
src/unicode/: mod.rs
src/unicode/char/: core_impls.rs  impls.rs  mod.rs  tests.rs
src/unicode/draw/: box_drawing.rs  mod.rs
src/unicode/drawing/: mod.rs
src/unicode/egc/: mod.rs  non_nul.rs  string.rs  u8string.rs
src/unicode/string/: counter.rs  mod.rs  non_nul.rs  strings.rs  u8string.rs
