[package]
name = "textos"
description = "Texts, strings, formatting, unicode…"
version = "0.0.3"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/textos"
documentation = "https://docs.rs/textos"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = ["text-processing", "value-formatting", "no-std::no-alloc"]
keywords = ["text", "string", "unicode"]
publish = true

# ------------------------------------------------------------------------------

[features]

#* capability features *#
default = []
full = [] # (unused)

#* environment features */
std = ["alloc", # disables `no_std` compatibility and enables `std` functionality
	"devela/std",
	# "unicode-truncate/std",
	# "unicode-bidi/std",
	# "unicode-script/std",
	# "unicode-width/std",
]
alloc = ["devela/alloc"] # enables `alloc` functionality
no_std = [ # enables functionality incompatible with `std`
	"devela/no_std",
	# "unicode-width/no_std"
]

#* safety features *#
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively
unsafe = [ # enables unsafe functionality in this crate
	"devela/unsafe_num", # enables unchecked constructors
]
safe = [] # forbids unsafe in this crate
safest = ["safe", "devela/safest"] # forbids unsafe recursively

#* nightly features *#
nightly = [] # enables nightly features
nightly_docs = [ # enables features for docs.rs
	"nightly", "full", "std", "unsafe",
]

#* deprecated features *#
no-std = ["no_std"] # since 0.0.3

[dependencies]
devela = "0.9.0"

# unicode-bidi = { version = "0.3.10", default-features = false, features = ["hardcoded-data"] }
unicode-blocks = { version = "0.1.8" }
# unicode-ident = { version = "1.0.11" }
# unicode-linebreak = "0.1.4"
# unicode-script = "0.5.5" # http://www.unicode.org/reports/tr24/
unicode-segmentation = "1.10.1"
# unicode-truncate = { version = "0.2.0", default-features = false }
# unicode-width = { version = "0.1.10", default-features = false }

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
